hphp/test/slow/container-ref-init/dict-init.php.expectf

Fatal error: Value of collection element cannot be marked as reference in %s/dict-init.php on line 7
